--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,4 @@
-<div class="section">
-    <img class="fixed" src="http://opusleads.com/opusing/technology/bg01.jpg">
+<div class="section" style="background-image: url('http://opusleads.com/opusing/technology/bg01.jpg')">
     <div class="container" style="padding-top: 50px;">
         <div class="row">
             <div class="col-md-6 ">
