--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
 
 .brand-logo img{
-    height: 8vh;
-} 
+    height: 45px;
+}
