--- a/charset/src/app/home/home.component.html
+++ b/charset/src/app/home/home.component.html
@@ -4,30 +4,30 @@
             <div class="col-md-6 ">
                 <div class="row">
                     <div class="col s12 m6">
-                        <div class="card blue-grey darken-1">
+                        <div *ngIf="!(authService.user | async)" class="card blue-grey darken-1">
                             <div class="card-content white-text">
                                 <span class="card-title">Login</span>
-                                <form>
+                                <form (keyup.enter)="login()">
                                     <div class="row">
                                         <div class="input-field col s12">
                                             <i style="color:white;" class="material-icons prefix">account_circle</i>
-                                            <input id="user" type="text" class="validate" >
-                                            <label for="user">Usuário</label>
+                                            <input id="user" type="text" name="email" class="validate" [(ngModel)]="email">
+                                            <label for="user">Email</label>
                                         </div>
                                     </div>
                                     <div class="row">
                                         <div class="input-field col s12">
                                             <i style="color:white;" class="material-icons prefix">lock</i>
-                                            <input id="senha" type="password" class="validate" >
+                                            <input id="senha" type="password" name="password" class="validate" [(ngModel)]="password">
                                             <label for="senha">Senha</label>
                                         </div>
                                     </div>
                                     <div><a href="#">Esqueceu sua senha?</a></div>
                                 </form>
                             </div>
-                            <div class="card-action">
-                                <div class="left"><a class="entrar waves-effect waves-light btn" (click)="getDados()">Entrar</a></div>
-                                <div class="right"><a class="cadastrar waves-effect waves-light btn" routerLink="/cadastro">Cadastre-se</a></div>
+                            <div class="card-action" align="center">
+                                <a style="margin-right: 20%" class="entrar waves-effect waves-light btn" (click)="login()">Entrar</a>
+                                <a class="cadastrar waves-effect waves-light btn" routerLink="/cadastro">Cadastre-se</a>
                             </div>
                         </div>
                     </div>
