redefinição de senha

--- a/charset/src/app/home/home.component.html
+++ b/charset/src/app/home/home.component.html
@@ -22,7 +22,7 @@
                                             <label for="senha">Senha</label>
                                         </div>
                                     </div>
-                                    <div><a href="#">Esqueceu sua senha?</a></div>
+                                    <div><a (click)="forgotPassword()" style="cursor: pointer" >Esqueceu sua senha?</a></div>
                                 </form>
                             </div>
                             <div class="card-action" align="center">
